# natiq_bot

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  bot.py  cache_manager.py  config.py  db_manager_demo.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: ci.yaml  ci.yml  docker-publish.yml
alembic/: README  README.md  env.py
alembic/versions/: 20260716_0001_uuid_columns_and_indexes.py  README.md
app/: __init__.py  main.py  provider.py
app/api/: client.py  provider.py
app/api/checker/: __init__.py  checker.py
app/bot/: application.py  router.py
app/bot/guards/: rate_limit.py
app/bot/handlers/: admin.py  (+6 more)
app/cache/: __init__.py  loader.py  quran.py  redis.py
app/core/: config.py  constants.py  container.py  exceptions.py  logging.py
app/data/: surahs.py
app/database/: base.py  session.py  types.py
app/i18n/: __init__.py  messages.py
app/repositories/: user_repository.py
app/schemas/: ayah.py
db/: channel.py  chat.py  group.py  session.py  social.py  test_connection.py
db/models/: channel.py  group.py  user.py
db/repositories/: channel_repo.py  group_repo.py  user_repo.py
migrations/versions/: 0001_initial.py
quran_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
redis/: verses.py
services/: user_service.py
services/messengers/: factory.py
tests/: README.md  test_admin_access.py  test_provider_next_ayah.py  test_random_handler_format.py  test_rate_limit.py
(+12 files in other folders)
